Create login logic

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -2,7 +2,7 @@
   <ion-row>
     <ion-col>
       <h1 class="logo">LOGO</h1>
-      <p class="description">This login page.</p>
+      <p class="description">This login page. {{loginService.isAuthorized}}</p>
       <p class="description">Courtesy of <a href="https://ionicthemes.com" target="_blank">IonicThemes</a> Team ;)</p>
     </ion-col>
   </ion-row>
