--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
   <ion-split-pane>
-    <ion-menu>
+    <ion-menu menuId="main">
       <ion-header>
         <ion-toolbar>
           <ion-title>Menu</ion-title>
@@ -13,6 +13,14 @@
               <ion-icon slot="start" [name]="p.icon"></ion-icon>
               <ion-label>
                 {{p.title}}
+              </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item (click)="logout()">
+              <ion-icon slot="start" name="exit"></ion-icon>
+              <ion-label>
+                Exit
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
