--- a/src/app/user/user.page.html
+++ b/src/app/user/user.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+		<ion-buttons slot="start">
+				<ion-menu-button></ion-menu-button>
+		</ion-buttons>
     <ion-title>Личный кабинет</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -7,9 +10,9 @@
 <ion-content>
 	<ion-list inset no-lines>
 		<ion-item *ngFor="let pill of pills"> <b> Name: </b> {{pill.name}} </ion-item>
-		
+
 	</ion-list>
-	
+
 	<ion-row>
 		<ion-col>
 			<ion-button color="primary" expand="block" (click)="navPills()">
