--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -1,3 +1,21 @@
-<p>
-  user-detail works!
-</p>
+<ion-content>
+	<ion-list inset no-lines>
+		<ion-item *ngFor="let pill of pills"> <b> Name: </b> {{pill.name}} </ion-item>
+
+	</ion-list>
+
+	<ion-row>
+		<ion-col>
+			<ion-button color="primary" expand="block" (click)="navPills()">
+        Мой курс лечения
+			</ion-button>
+		</ion-col>
+	</ion-row>
+	<ion-row>
+		<ion-col>
+			<ion-button class="log-in-button" color="primary" expand="block" (click)="navWatchers()">
+        Мои наблюдающие
+			</ion-button>
+		</ion-col>
+	</ion-row>
+</ion-content>
