--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -1,3 +1,14 @@
+<ion-header>
+	<ion-toolbar>
+		<ion-buttons slot="start">
+			<ion-menu-button></ion-menu-button>
+		</ion-buttons>
+		<ion-title>
+			Profile Page
+		</ion-title>
+	</ion-toolbar>
+</ion-header>
+
 <ion-content>
 	<ion-list inset no-lines>
 		<ion-item *ngFor="let pill of pills"> <b> Name: </b> {{pill.name}} </ion-item>
