--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -11,7 +11,7 @@
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let user of users$ | async">
+    <ion-item *ngFor="let user of users" href="/users/{{user.id}}">
       <!--<ion-icon [name]="item.icon" slot="start"></ion-icon>-->
       {{user.login}}
       <div class="item-note" slot="end">
