Squash commit from branch nikita-night-code
commit 97e21f7178a0a081b23a8c2ace3155961f559d34
Author: nikchernyakov <nikchernyakov@yandex.ru>
Date:   Sun Jun 9 01:49:59 2019 +0300

    Add getting pills list

--- a/src/app/pills/pills.page.html
+++ b/src/app/pills/pills.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
 	<ion-list inset no-lines>
-		<ion-item *ngFor="let pill of pills"> <b> Лекарство: </b> {{pill.name}}, {{pill.reception}} </ion-item>
+		<ion-item *ngFor="let pill of pills" (click)="toRecipe(pill)"> <b> Лекарство: </b> {{pill.id}} </ion-item>
 	</ion-list>
 	
 	<ion-row>
