--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,11 +8,29 @@
       </ion-header>
       <ion-content>
         <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item (click)="mainPage()">
+              <ion-icon slot="start" name="home"></ion-icon>
               <ion-label>
-                {{p.title}}
+                Личная страница
+              </ion-label>
+            </ion-item>
+            <ion-item (click)="dashboardPage()">
+              <ion-icon slot="start" name="home"></ion-icon>
+              <ion-label>
+                Dashboard
+              </ion-label>
+            </ion-item>
+            <ion-item (click)="watchersPage()">
+              <ion-icon slot="start" name="home"></ion-icon>
+              <ion-label>
+                Наблюдатели
+              </ion-label>
+            </ion-item>
+            <ion-item (click)="watchingPage()">
+              <ion-icon slot="start" name="home"></ion-icon>
+              <ion-label>
+                Наблюдение
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
