Fix links for dashboard and pills

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,13 @@
             <ion-item (click)="dashboardPage()">
               <ion-icon slot="start" name="home"></ion-icon>
               <ion-label>
-                Dashboard
+                Сегодня
+              </ion-label>
+            </ion-item>
+            <ion-item (click)="pillsPage()">
+              <ion-icon slot="start" name="home"></ion-icon>
+              <ion-label>
+                Мои лекарства
               </ion-label>
             </ion-item>
             <ion-item (click)="watchersPage()">
