--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -4,29 +4,45 @@
 			<ion-menu-button></ion-menu-button>
 		</ion-buttons>
 		<ion-title>
-			Profile Page
+			Профиль
 		</ion-title>
 	</ion-toolbar>
 </ion-header>
 
 <ion-content>
-	<ion-list inset no-lines>
-		<ion-item *ngFor="let pill of pills"> <b> Name: </b> {{pill.name}} </ion-item>
-
+	<ion-list inset="true" lines="none">
+		<ion-item>
+			<ion-avatar slot="start">
+				<img src="../../assets/avatar.svg">
+			</ion-avatar>
+			<ion-label>
+				{{user.firstName}} {{user.lastName}} 
+			</ion-label>
+		</ion-item>
+	</ion-list>
+	
+    <ion-list inset="true" lines="none">
+        <ion-list-header>
+          Параметры
+        </ion-list-header>
+		<ion-item>
+          <ion-label>
+            <h2>Возраст: {{user?.age || 'N/A'}}</h2>
+			<h2>Вес: {{user?.waight || 'N/A'}}</h2>
+			<h2>Рост: {{user?.height || 'N/A'}}</h2>
+          </ion-label>
+        </ion-item>
+	</ion-list>
+	
+	<ion-list inset="true" lines="none">
+        <ion-list-header>
+          Лечение
+        </ion-list-header>
+		<ion-item>
+          <ion-label *ngFor="let pill of user.pills">
+            <h2>{{pill}}</h2>
+          </ion-label>
+        </ion-item>
 	</ion-list>
 
-	<ion-row>
-		<ion-col>
-			<ion-button color="primary" expand="block" (click)="navPills()">
-        Мой курс лечения
-			</ion-button>
-		</ion-col>
-	</ion-row>
-	<ion-row>
-		<ion-col>
-			<ion-button class="log-in-button" color="primary" expand="block" (click)="navWatchers()">
-        Мои наблюдающие
-			</ion-button>
-		</ion-col>
-	</ion-row>
 </ion-content>
