Add finding pill and move to adding recipe

--- a/src/app/pills/pills.page.html
+++ b/src/app/pills/pills.page.html
@@ -14,8 +14,8 @@
 	
 	<ion-row>
 		<ion-col>
-			<ion-button color="primary" expand="block" (click)="toRecipe()">
-        К рецепту
+			<ion-button color="primary" expand="block" (click)="addRecipe()">
+        Добавить новый
 			</ion-button>
 		</ion-col>
 	</ion-row>
