--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content>
-	<ion-list inset="true" lines="none">
+	<ion-list inset="true" lines="none" style="box-shadow: 1px 1px 1px 1px grey;">
 		<ion-item>
 			<ion-avatar slot="start">
 				<img src="../../assets/avatar.svg">
@@ -21,7 +21,7 @@
 		</ion-item>
 	</ion-list>
 	
-    <ion-list inset="true" lines="none">
+    <ion-list inset="true" lines="none" style="box-shadow: 1px 1px 1px 1px grey;">
         <ion-list-header>
           Параметры
         </ion-list-header>
@@ -34,7 +34,7 @@
         </ion-item>
 	</ion-list>
 	
-	<ion-list inset="true" lines="none">
+	<ion-list inset="true" lines="none" style="box-shadow: 1px 1px 1px 1px grey;">
         <ion-list-header>
           Лечение
         </ion-list-header>
