Add assigning recipe

--- a/src/app/recipe/recipe.page.html
+++ b/src/app/recipe/recipe.page.html
@@ -11,7 +11,7 @@
 	<ion-list>
 		<ion-item>
 			<ion-label position="stacked">Название</ion-label>
-			<ion-input type="text" name="medicine" disabled>{{recipeData?.name || 'N/A'}}</ion-input>
+			<ion-input type="text" name="medicine" disabled>{{pillData?.name || 'N/A'}}</ion-input>
 		</ion-item>
 		<ion-item>
 			<ion-label position="stacked">Начало приёма</ion-label>
