--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -3,7 +3,9 @@
   		<ion-buttons slot="start">
 			<ion-menu-button></ion-menu-button>
 		</ion-buttons>
-		<ion-title>Сегодня</ion-title>
+		<ion-title color="primary">
+			Сегодня
+		</ion-title>
 	</ion-toolbar>
 </ion-header>
 
