--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,31 +10,31 @@
         <ion-list>
           <ion-menu-toggle auto-hide="false">
             <ion-item (click)="mainPage()">
-              <ion-icon slot="start" name="home"></ion-icon>
+              <ion-icon slot="start" name="happy"></ion-icon>
               <ion-label>
                 Личная страница
               </ion-label>
             </ion-item>
             <ion-item (click)="dashboardPage()">
-              <ion-icon slot="start" name="home"></ion-icon>
+              <ion-icon slot="start" name="time"></ion-icon>
               <ion-label>
                 Сегодня
               </ion-label>
             </ion-item>
             <ion-item (click)="pillsPage()">
-              <ion-icon slot="start" name="home"></ion-icon>
+              <ion-icon slot="start" name="medkit"></ion-icon>
               <ion-label>
                 Мои лекарства
               </ion-label>
             </ion-item>
             <ion-item (click)="watchersPage()">
-              <ion-icon slot="start" name="home"></ion-icon>
+              <ion-icon slot="start" name="people"></ion-icon>
               <ion-label>
                 Наблюдатели
               </ion-label>
             </ion-item>
             <ion-item (click)="watchingPage()">
-              <ion-icon slot="start" name="home"></ion-icon>
+              <ion-icon slot="start" name="people"></ion-icon>
               <ion-label>
                 Наблюдение
               </ion-label>
