Rename menu buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,15 +36,15 @@
             <ion-item (click)="watchingPage()">
               <ion-icon slot="start" name="people"></ion-icon>
               <ion-label>
-                Наблюдение
+                Подписки
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
-          <ion-menu-toggle auto-hide="false">
+          <ion-menu-toggle auto-hiљde="false">
             <ion-item (click)="logout()">
               <ion-icon slot="start" name="exit"></ion-icon>
               <ion-label>
-                Exit
+                Выход
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
