--- a/src/app/recipe/recipe.page.html
+++ b/src/app/recipe/recipe.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Добавление лекарства</ion-title>
+    <ion-title>Добавить</ion-title>
 	<ion-buttons slot="end">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -22,7 +22,7 @@
 			<ion-input type="number" [(ngModel)]="recipeData.length" name="length"></ion-input>
 		</ion-item>
 		<ion-item>
-			<ion-label position="stacked">Общее количество ({{recipeData.type}})</ion-label>
+			<ion-label position="stacked">Куплено таблеток</ion-label>
 			<ion-input type="number" [(ngModel)]="recipeData.amount" name="amount"></ion-input>
 		</ion-item>
 		<ion-item>
