--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -28,7 +28,7 @@
 		<ion-item>
           <ion-label>
             <h2>Возраст: {{user?.age || 'N/A'}}</h2>
-			<h2>Вес: {{user?.waight || 'N/A'}}</h2>
+			<h2>Вес: {{user?.weight || 'N/A'}}</h2>
 			<h2>Рост: {{user?.height || 'N/A'}}</h2>
           </ion-label>
         </ion-item>
