--- a/src/app/patient/patient-list/patient-list.component.html
+++ b/src/app/patient/patient-list/patient-list.component.html
@@ -10,15 +10,21 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item *ngFor="let user of users" href="/users/{{user.id}}">
+  <ion-list *ngIf="patients.length">
+    <ion-item *ngFor="let patient of patients" href="/users/{{patient.id}}">
       <!--<ion-icon [name]="item.icon" slot="start"></ion-icon>-->
-      {{user.login}}
+      {{patient.login}}
       <div class="item-note" slot="end">
-        {{user.firstName}} / {{user.lastName}}
+        {{patient.firstName}} / {{patient.lastName}}
       </div>
     </ion-item>
   </ion-list>
+
+  <ion-card *ngIf="!patients.length" style="--background: white; --color: black">
+    <ion-card-content>
+      Нет пациентов
+    </ion-card-content>
+  </ion-card>
   <!--
     <div *ngIf="selectedItem" padding>
       You navigated here from <b>{{selectedItem.title }}</b>
