--- a/src/app/doctor/doctor-list/doctor-list.component.html
+++ b/src/app/doctor/doctor-list/doctor-list.component.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Список докторов
+      Список наблюдателей
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -23,7 +23,7 @@
 
   <ion-card *ngIf="!doctors.length" style="--background: white; --color: black">
     <ion-card-content>
-      Нет пациентов
+      Нет наблюдателей
     </ion-card-content>
   </ion-card>
   <!--
