--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-menu menuId="main">
       <ion-header>
         <ion-toolbar>
-          <ion-title>Menu</ion-title>
+          <ion-title>Меню</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
@@ -39,8 +39,6 @@
                 Подписки
               </ion-label>
             </ion-item>
-          </ion-menu-toggle>
-          <ion-menu-toggle auto-hiљde="false">
             <ion-item (click)="logout()">
               <ion-icon slot="start" name="exit"></ion-icon>
               <ion-label>
