--- a/src/app/patient/patient-list/patient-list.component.html
+++ b/src/app/patient/patient-list/patient-list.component.html
@@ -10,16 +10,30 @@
 </ion-header>
 
 <ion-content>
-  <ion-list *ngIf="patients.length">
+  <!--<ion-list *ngIf="patients.length">-->
     <!--<ion-item *ngFor="let patient of patients" href="/users/{{patient.id}}">-->
-      <ion-item *ngFor="let patient of patients">
+      <ion-card style="--background: white; --color: black" *ngFor="let patient of patients">
+          <ion-card-content *ngIf="patients.length">
+      <ion-item>
       <!--<ion-icon [name]="item.icon" slot="start"></ion-icon>-->
-      {{patient.login}}
-      <div class="item-note" slot="end">
-        {{patient.firstName}} / {{patient.lastName}}
-      </div>
+          <ion-label>
+              <h1>{{patient.login}}</h1>
+              <ion-text color="primary">
+                <h3>{{patient.firstName}} / {{patient.lastName}}</h3>
+              </ion-text>
+              <!--<p>Paragraph line 1</p>-->
+              <!--<ion-text color="secondary">-->
+                  <!--<p>Paragraph line 2 secondary</p>-->
+              <!--</ion-text>-->
+          </ion-label>
     </ion-item>
-  </ion-list>
+          </ion-card-content>
+
+          <!--<ion-card-content *ngIf="!patients.length">-->
+              <!--Нет подписок-->
+          <!--</ion-card-content>-->
+      </ion-card>
+  <!--</ion-list>-->
 
   <ion-card *ngIf="!patients.length" style="--background: white; --color: black">
     <ion-card-content>
