--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -20,7 +20,7 @@
 	
 	<ion-list inset="true" lines="none" *ngFor="let pill of pills" style="box-shadow: 1px 1px 1px 1px grey;">
 	    <ion-list-header>
-			Сегодня, {{Date.now()}}
+			Сегодня, {{today}}
         </ion-list-header>
 		<ion-row>
 			<ion-col>
