--- a/src/app/recipe/recipe.page.html
+++ b/src/app/recipe/recipe.page.html
@@ -30,8 +30,9 @@
 			<ion-input type="number" [(ngModel)]="recipeData.frequency" name="frequency" (ionInput)="changeFr($event.target.value)"></ion-input>
 		</ion-item>
 		<ion-item *ngFor="let x of times; let i = index;">
-			<ion-label stacked>Время приёма {{i+1}} {{x}}</ion-label>
-			<ion-datetime displayFormat="HH:mm" [(ngModel)]="x" name="times" placeholder="Время" text-center></ion-datetime>
+			<ion-label stacked>Время приёма {{i+1}}</ion-label>
+			<ion-datetime displayFormat="HH:mm" [(ngModel)]="x"
+                    name="times" placeholder="Время" text-center></ion-datetime>
 		</ion-item>
 	</ion-list>
 	<ion-button color="primary" expand="block" (click)="createRecipe()">
