--- a/src/app/watchers/watchers.page.html
+++ b/src/app/watchers/watchers.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Мои наблюдающие</ion-title>
+    <ion-title color="primary">Мои наблюдающие</ion-title>
 	<ion-buttons slot="end">
       <ion-back-button></ion-back-button>
     </ion-buttons>
