--- a/src/app/pills/pills.page.html
+++ b/src/app/pills/pills.page.html
@@ -3,7 +3,7 @@
   		<ion-buttons slot="start">
 			<ion-menu-button></ion-menu-button>
 		</ion-buttons>
-		<ion-title>Мои лекарства</ion-title>
+		<ion-title color="primary">Мои лекарства</ion-title>
 	</ion-toolbar>
 </ion-header>
 
