--- a/src/app/recipe/recipe.page.html
+++ b/src/app/recipe/recipe.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Добавить</ion-title>
+    <ion-title color="primary">Добавить</ion-title>
 	<ion-buttons slot="end">
       <ion-back-button></ion-back-button>
     </ion-buttons>
