--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -39,7 +39,7 @@
 			<h5>Статистика</h5>
         </ion-list-header>
 		<ion-item>
-			<ion-label slot="start">
+			<ion-label>
 				<ion-text>
 					Без пропусков:
 				</ion-text>
@@ -47,7 +47,7 @@
 					3 дня
 				</ion-text>
 			</ion-label>
-			<ion-label slot="end">
+			<ion-label>
 				<ion-text>
 					Ваша скидка:
 				</ion-text>
